# mvp-coleta-dados-vagas-cnpq-py

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
job_collector/: __init__.py  collector.py  config.py  db.py  export_results.py  main.py  monthly.py  regions.py  sanitize.py  serpapi.py  theirstack.py
migrations/: 001_initial.sql  002_publication_dates.sql
results/: serpapi.json  theirstack.json
results/monthly/2026-07/: serpapi.json  summary.json  theirstack.json  unique_jobs.json
scripts/: inspect_data.sql
tests/: conftest.py  test_cli.py  test_collector.py  test_db.py  test_export_results.py  test_monthly.py  test_providers.py  test_regions.py  test_sanitize.py  test_serpapi.py  test_theirstack.py
tests/fixtures/: serpapi_empty_response.json  serpapi_provider_error.json  serpapi_response.json  theirstack_empty_response.json  theirstack_response.json
